@@ -12,11 +12,18 @@ var shimmer = require('../shimmer')
 var symbols = require('../../symbols')
 
 module.exports = function (Knex, agent, { version, enabled }) {
-  if (!enabled) return Knex
+  if (!enabled) {
+    return Knex
+  }
   if (semver.gte(version, '1.0.0')) {
     agent.logger.debug('knex version %s not supported - aborting...', version)
     return Knex
   }
+  if (semver.gte(version, '0.95.0') && agent._conf.contextManager === 'patch') {
+    agent.logger.debug('knex >=0.95.0 instrumentation is not supported with contextManager=patch config', version)
+    return Knex
+  }
+
   if (Knex.Client && Knex.Client.prototype) {
     var QUERY_FNS = ['queryBuilder', 'raw']
     agent.logger.debug('shimming Knex.Client.prototype.runner')
